# numpy_cmake

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
numpy_cmake_example/: __init__.py  test.py
src/: array_add.cpp
